fix: remove music because compile time was too long
